--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ img {
     width: 200px;
 }
 body {
+    font-size: 50px;
     text-align: center;
     font-family: 'Arial';
     background: lightblue;
-    color: red;
+    color:rgb(255, 0, 67);
 }
